# otus

./: .gitignore
.github/workflows/: h6-ci.yml  (+1 more)
H1/: report.md
H1/calculator-api/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
H1/calculator-api/app/: config.py  main.py  middleware.py
H1/calculator-api/app/api/: dependencies.py
H1/calculator-api/app/api/v1/: router.py
H1/calculator-api/app/api/v1/endpoints/: calculator.py  health.py
H1/calculator-api/app/core/: config.py  logging.py
H1/calculator-api/app/routes/: calculator.py  health.py
H1/calculator-api/app/schemas/: calculator.py
H1/calculator-api/app/services/: calculator.py
H1/calculator-api/tests/: conftest.py
H2/: .env.example  .gitignore  LICENSE  docker-compose.dev.yml  docker-compose.yml  prompt_templates.md  readme.md  report.md  skills-lock.json
H3/: project_description.md  report.md  technical_specification.md  user_stories.md
H4/: PLAN_R.md  development_report.md  docker-compose.yml
H5/: .env.example  .gitignore  README.md  backend_documentation.md  docker-compose.yml  repot.md
H5/backend/: .env.example  Dockerfile  pyproject.toml
H5/backend/app/: main.py
H5/backend/app/api/v1/endpoints/: auth.py
H5/backend/app/core/: exceptions.py
H5/backend/app/middleware/: csrf.py  rate_limiter.py
H5/backend/app/models/: saved_filters.py  trader_profile.py
H5/backend/app/repositories/: base_repository.py  blacklist_repository.py  merchant_repository.py
H5/backend/app/schemas/: auth.py  p2p.py
H5/backend/app/services/: profile_service.py
H5/backend/app/services/p2p_source/: p2p_army.py
H5/backend/app/services/scoring/: strategy.py
H5/backend/app/tasks/: polling.py
H5/backend/tests/: conftest.py  test_scoring.py
H6/: README.md  hendmade.md  integration_documentation.md  security_audit.md
H6/mock-server/: pyproject.toml
H6/mock-server/app/: generator.py  main.py
H7_Final/: .env.example  .gitignore  AI_PROCESS.md  README.md  docker-compose.yml
(+243 files in other folders)
